@@ -1,1 +1,0 @@
-* check interoperability with DateTime's {utc,local}_rd_values around leap seconds
